# SOA

./: README.md  docker-compose.test.yml  docker-compose.yml  open_api.yml
api_service/: README.md
docs/: api_service.mmd  diagram.c4  post_service.mmd  reaction_service.mmd  user_service.mmd
post_service/: README.md
proxy_service/: Cargo.toml  Dockerfile  README.md
proxy_service/src/: main.rs
reaction_service/: README.md
user_service/: .env  Cargo.toml  Dockerfile  README.md  signature.pem  signature.pub
user_service/.sqlx/: query-389adfeac4c92646c6294ca089fd8926c2e99a1e6fbff03073fb331357fcf9e9.json  query-3c5675e59f722e91f86736c71433a8c8f045d4a440a03797a4a5ec4340d965b6.json  query-ee58c37547d2c08d5625dbfca651cab68b189017ac5a0b493c9da15c2ad09846.json  query-ef59b30f95755912f1baeee8183fb02782f53eac5b7e32174ca9411d14987368.json
user_service/migrations/: 20250303163628_create_users_table.sql
user_service/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  server_data.rs
