[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
bcrypt = "0.17"
clap = {version = "4.5.23", features = ["derive"]}
lazy_static = "1.5"